--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+#posts{
+  padding: 7% 0;
+  position: relative;
+  z-index: 1;
+  background-color: #fff;    
+}
+
+.post-box {
+  text-align: center;
+  padding: 5% 3%;
+}
+
+.post-title {
+  color: #000;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+.icon {
+  color: #ef8172;
+  margin: 5%;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
