--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
-
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h4 class="card-title text-center">Esqueceu a sua senha?</h4>
+              <form class="form-login">
+                <div class="form-label-group">                  
+                  <%= f.label :email_cadastrado %> 
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %> <br/>
+                </div>                
+                <div class="actions">
+                  <%= f.submit "Me envie instruções", class:'btn btn-lg btn-primary btn-block text-uppercase' %>  
+                  <hr class="my-4">
+                </div>                               
+                  <%= render "devise/shared/links" %>                  
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>      
+    </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
