--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,39 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+          <div class="card card-signin my-5">
+            <div class="card-body">
+              <h4 class="card-title text-center">Cadastre-se</h4>
+              <form class="form-sign">
+                <div class="form-label-group">                  
+                  <%= f.label :email %> 
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %> <br/>
+                </div>
+                <div class="form-label-group">
+                  <%= f.label :Senha %>
+                  <% if @minimum_password_length %>
+                  <% end %>
+                  <%= f.password_field :password, autocomplete: "new-password", class:'form-control' %>  
+                  <em>(<% @minimum_password_length %> deve conter no mínimo 6 caracteres)</em> 
+                  <br/> <br/>
+                </div>
+                <div class="form-label-group">                  
+                  <%= f.label :confirme_sua_senha %>
+                  <%= f.password_field :confirme_sua_senha, autocomplete: "new-password", class:'form-control' %>
+                  <br />
+                </div>
+                <div class="actions">
+                  <%= f.submit "Cadastrar", class:'btn btn-lg btn-primary btn-block text-uppercase' %>  
+                  <hr class="my-4">
+                </div>                               
+                  <%= render "devise/shared/links" %>                  
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>      
+    </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
