--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <title>Blog Noticias</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="/app/assets/stylesheets/home.scss">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -19,29 +19,40 @@
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="">Página inicial<span class="sr-only">(current)</span></a>
-          </li>          
-          <li><% link_to "Posts", "/posts" %> </li>
+          </li> 
           <li class="nav-item">
             <a class="nav-link" href="/authors/sign_up">Cadastrar</a>
-          </li>          
-          <li class="nav-item" style="display:none">
-            <a class="nav-link" href="/authors/sign_up">Cadastrar</a>
-          </li>          
-          <li class="nav-item">
-            <a class="nav-link" href="/posts">Noticias</a>
+          </li>   
+          <li class="nav-item">                   
+            <a class="nav-link" href="/posts">Cadastro de notícias</a>          
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/authors/sign_in">Entrar</a>
           </li>
-          <%= link_to 'Destroy Author', destroy_author_session_path, class: 'btn btn-primary' %>
-        </ul>
+        </ul>        
       </div>
     </nav>
-
+      <section id="posts">
+        <% @posts.each do |post| %>
+          <div class="container-fluid">              
+            <div class="row">
+              <div class="post-box col-lg-4">
+                <i class="icon fas fa-check-circle fa-4x"></i>
+                <h1 class="post-title"><%= post.title %></h1>
+                <p class="post-p"><%= post.description%></p>
+                <p class="post-p"><%= post.created_at.strftime("Criado em %d/%m/%Y") %></p>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </section>
+      
+      
+    
+    
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
   </body>
-  <footer>
-    
+  <footer>    
   </footer>
 </html>
